[package]
name = "shams"
version = "0.1.0"
authors = ["graymind75"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
colored_truecolor = "0.1.0"
dirs = "3.0"
chrono = "0.4"