[package]
name = "shams"
version = "2.0.0"
authors = ["Benyamin Eskandari <me@benyaamin.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptime = "0.1"
colored_truecolor = "0.1.0"
tabled = { version = "0.8.0", features = ["color"] }